# Projektarbeit_2026

./: .dockerignore  .env.example  .gitignore  KI_RASSENERKENNUNG_README.md  MAPS_FEATURE_README.md  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  docs.yml  fly-deploy.yml
app/: __init__.py  app.py  auth_flow.py  dialogs.py  navigation.py
deploy/: .dockerignore  Dockerfile  fly.toml
docs/entwickler/: datenbank.md  installation.md
docs/nutzer/: erste-schritte.md  konto.md  suchen.md
documentation/: mkdocs.yml
documentation/docs/: index.html  index.md  installation-quickstart.md  nutzungshandbuch.md  technische-dokumentation.md
i18n/: __init__.py  de.json  en.json  i18n_ui_helper.py  reference_translator.py  translator.py
services/: __init__.py  auth.py  discover.py  pet_recognition.py  posts.py  profile.py  references.py  saved_search.py  supabase_client.py
services/account/: __init__.py  account_deletion.py  auth.py  profile.py  profile_image.py
services/ai/: pet_recognition.py
services/geocoding/: __init__.py  mapbox_geocoding.py
services/posts/: __init__.py  comment.py  favorites.py  filters.py  map_service.py  post.py  post_image.py  post_relations.py  queries.py  references.py  saved_search.py  search.py
ui/: __init__.py  auth.py  comment_section.py  components.py  constants.py  discover.py  helpers.py  post_form.py  profile.py  shared_components.py  theme.py
ui/auth/: view.py  (+5 more)
utils/: __init__.py  constants.py  filters.py  logging_config.py  map_generator.py  pdf_generator.py  validators.py
(+116 files in other folders)
