[project]
name = "petbuddy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet>=0.28.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.0.0",
]
