[project]
name = "petbuddy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet>=0.28.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "certifi>=2024.2.2",
    "httpx>=0.27.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.0.0",
]
